sterlang/examples/neg/src/n04.erlt
-module(n04).
-export([inferred_funs/0]).

%% even simpler example of row circularity
foo(B, R) ->
    if
        B -> #( self = R );
        true -> R
    end.

-spec inferred_funs() -> [term()].
[unchecked]
inferred_funs() -> [
    fun foo/2
].
